--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="favicon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="stylesheet" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Pure JavaScript Excel</title>
-</head>
-<body>
-    <div id="app" class="container"></div>
-</body>
+  </head>
+  <body>
+    <div id="app" class="container">
+      <div class="excel">
+        <input class="excel__header">
+            <input type="text" class="input" value="Новая таблица"/>
+            <div>
+                <div class="button">
+                    <i class="material-icons">delete</i>
+                </div>
+                <div class="button">
+                    <i class="material-icons">exit_to_app</i>
+                    888
+                </div>
+            </div>
+        </div>
+        <div class="excel__toolbar"></div>
+        <div class="excel__formula"></div>
+        <div class="excel__table"></div>
+      </div>
+    </div>
+  </body>
 </html>
